2003-10-01  Chris Toshok  <toshok@ximian.com>

	* gui/component/Makefile.am: remove some commented out crap about
	e-address-popup.[ch].

	* gui/component/component-factory.c (factory): use
	eab_popup_control_new for the AddressPopup iid.

	* gui/widgets/Makefile.am (libeabwidgets_la_SOURCES): add
	eab-popup-control.[ch].

	* backend/ebook/e-book.c (e_book_get_default_addressbook): hack
	this so it at least sorta works - hardcode the
	~/evolution/local/Contacts uri for now.

	* gui/component/addressbook.[ch] (addressbook_load_default_book):
	remove the EBook argument, and call
	e_book_async_get_default_addressbook.

	* gui/component/e-address-popup.[ch]: nuke.
	
	* gui/widgets/eab-popup-control.c: rename
	gui/component/e-address-popup.c to this.

	* gui/widgets/eab-popup-control.h: rename
	gui/component/e-address-popup.h to this.

	* backend/ebook/e-book-async.h: add prototype for
	e_book_async_get_default_addressbook.
	
	* backend/ebook/e-book-async.c
	(e_book_async_get_default_addressbook): new function.

2003-10-01  Chris Toshok  <toshok@ximian.com>

	* gui/widgets/e-addressbook-view.c (eab_view_new): create the
	scrolled window to embed the EABContactDisplay widget inside of.

	* gui/widgets/e-addressbook-view.h (struct _EABView): add scrolled;

	* gui/widgets/eab-contact-display.h: add
	EABContactDisplayRenderMode enum, and add @render_mode arg to
	eab_contact_display_render.

	* gui/widgets/eab-contact-display.c
	(eab_contact_display_render_compact): new function, render a
	compact format suitable for inclusion in the mail display.
	(eab_contact_display_render_normal): move the previouw contents of
	eab_contact_display_render here.
	(eab_contact_display_render): render in either compact or normal
	mode depending on @mode.
	(eab_contact_display_new): remove the scrolled window stuff from
	here, as in the compact mode we don't want it present.  push it up
	into the e-addressbook-view.c code.
	
	* gui/widgets/eab-vcard-control.[ch]: bonobo control that wraps up